--- a/style.css
+++ b/style.css
@@ -1,9 +1,75 @@
 body {
     padding-top: 5rem;
+    font-family: Avenir Next;
+    margin: 0;
   }
-  .starter-template {
+
+.starter-template {
     padding: 3rem 1.5rem;
     text-align: center;
   }
-  
-  
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Garamond;
+    font-weight: 900;
+}
+
+.v-align {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+
+hr {
+    background-color: #ceb2ed;
+    height: 1px;
+}
+
+
+main a {
+    color: #542d80;
+}
+
+main a:hover {
+    color: #542d80;
+    opacity: 0.5;
+    text-decoration: none;
+}
+
+table {
+    border-left: 4px solid #542d80;
+    background-color: rgba(206, 178, 237, 0.25);
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+td {
+    padding:8px;
+}
+
+.bg-purple {
+    background-color: #542d80;
+}
+
+.past-proj {
+    background-color: rgba(206, 178, 237, 0.25);
+    padding: 10px;
+    border-radius: 10px;
+    height: 95%;
+    margin-top: 10px;
+}
+
+.dropdown-item{
+    color: #542d80;
+}
+
+.dropdown-item:hover {
+    color: #542d80;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255, 255, 255,.65);
+}
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: rgba(255, 255, 255,.85);
+}
